--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
   - "3.5"
-install: pip install --use-mirrors .
+install: pip install .
 before_script:
-  - pip install -r tests/requirements.txt --use-mirrors
+  - pip install -r tests/requirements.txt
 script:  coverage run --source=twapi_users setup.py test
 after_success:
   - coveralls
